testsuite/tests/module/mod91.stderr
mod91.hs:3:16: error: [GHC-10237]
    In the import of ‘Prelude’:
      a class called ‘Eq’ is exported, but it does not export
      any class methods called ‘eq’.

